[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | venv
)/
'''

[tool.poetry]
name = "blackshark-python-assignment"
version = "0.1.0"
description = "Test assignment for candidate Python developers"
authors = ["Arno Hollosi <ahollosi@blackshark.ai>"]
license = "(c) 2021 Blackshark.ai - All rights reserved!"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
numpy = "^1.20.1"
requests = "^2.25.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
pylint = "^2.7.2"
sqlalchemy-stubs = "^0.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
